--- a/src/Modules/Laser.Orchard.GDPR/Laser.Orchard.GDPR.Tests/packages.config
+++ b/src/Modules/Laser.Orchard.GDPR/Laser.Orchard.GDPR.Tests/packages.config
@@ -5,8 +5,13 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
-  <package id="Moq" version="4.0.10827" targetFramework="net48" />
+  <package id="Moq" version="4.2.1510.2205" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net48" />
   <package id="NUnit" version="2.5.10.11092" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net48" />
 </packages>
