--- a/src/Modules/Laser.Orchard.OpenAuthentication/packages.config
+++ b/src/Modules/Laser.Orchard.OpenAuthentication/packages.config
@@ -12,9 +12,11 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net48" />
   <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net48" />
 </packages>
