--- a/src/Modules/Laser.Orchard.StartupConfig/packages.config
+++ b/src/Modules/Laser.Orchard.StartupConfig/packages.config
@@ -10,11 +10,14 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.2.4" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.4" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.4" targetFramework="net48" />
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
   <package id="NHibernate" version="4.0.1.4000" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net48" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="4.0.2.206221351" targetFramework="net48" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.4" targetFramework="net48" />
 </packages>
